# session2

task1/: CMakeLists.txt  Task1.h  main.cpp  task1.cpp
task2/: CMakeLists.txt  main.cpp
task2/include/: Cat.h  Dog.h  GuineaPig.h  Horse.h  Mammal.h
task2/lib/: Cat.cpp  Dog.cpp  GuineaPig.cpp  Horse.cpp  Mammal.cpp
test/: main.cpp  program
